Version 2.03.12 - 
===================================
  Report error when the filesystem is missing on fsadm resized volume.
  Handle better blockdev with --getsize64 support for fsadm.
  Do not include editline/history.h when using editline library.
  Support lvconvert -Zn with thin-pool conversion.
  Support error and zero segtype for thin-pool data for testing.
  Support mixed extension for striped, error and zero segtypes.
  Support resize also for stacked virtual volumes.
  Skip dm-zero devices just like with dm-error target.
  Reduce ioctl() calls when checking target status.
  Merge polling does not fail, when LV is found to be already merged.
  Poll volumes with at least 100ms delays.
  Do not flush dm cache when cached LV is going to be removed.
  Support interruption while waiting on device close before deactivation.
  Flush thin-pool messages before removing more thin volumes.
  Improve hash function with less collisions and make it faster.
  Reduce ioctl count when deactivating volumes.
  Reduce number of metadata parsing.
  Enhance performance of lvremove and vgremove commands.
  Support interruption when taking archive and backup.
  Accelerate large lvremoves.
  Speedup search for cached device nodes.
  Speedup command initialization.
  Add devices file feature, off by default for now.
  Support extension of writecached volumes.
  Fix problem with unbound variable usage within fsadm.
  Check for presence of VDO target before starting any conversion.
  Support metatadata profiles with volume VDO pool conversions.
  Support -Zn for conversion of already formated VDO pools.
  Avoid removing LVs on error path of lvconvert during creation volumes.
  Fix crashing lvdisplay when thin volume was waiting for merge.
  Support option --errorwhenfull when converting volume to thin-pool.
  Improve thin-performance profile support conversion to thin-pool.
  Add workaround to avoid read of internal 'converted' devices.